# llminfo-cli

./: .env  .env.example  .env.test  .gitignore  AGENTS.md  BLUEPRINT.md  GEMINI.md  QWEN.md  README.ja.md  README.md  SPEC.md  Taskfile.yml  debug_api.py  debug_raw_api.py  pr_test.txt  providers.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  security.yml
.my/: review_20251227_mistralvibe.md
docs/: CodingTestingRule.md  DesignRule.md  OverviewCodingTestingThinking.md  OverviewDesignThinking.md  WorkingLog.md  code_review_analysis.md  review_20260103_geminicli+gemini3.md
llminfo_cli/: __init__.py  cache.py  errors.py  main.py  models.py  schemas.py  validators.py
llminfo_cli/providers/: __init__.py  base.py  generic.py  openrouter.py  parsers.py
tests/: INTEGRATION.md  __init__.py  conftest.py  test_cache.py  test_cli_commands.py  test_edge_cases.py  test_errors.py  test_integration.py  test_json_output.py  test_list_models.py  test_main.py  test_models.py  test_parsers.py  test_providers.py
