[project]
name = "llminfo-cli"
version = "0.1.0"
description = "CLI tool for retrieving LLM model information from OpenRouter.ai and related AI providers"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "llminfo_cli/data/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "llminfo_cli/data/*",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
llminfo = "llminfo_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires API keys)"
]
